--- a/static/css/screens/guide_new.css
+++ b/static/css/screens/guide_new.css
@@ -4,13 +4,13 @@
 #menu_wrap {position:absolute;top:0;left:0;bottom:0;width:250px;margin:10px 0 30px 10px;padding:5px;overflow-y:auto;background:rgba(255, 255, 255, 0.7);z-index: 1;font-size:12px;border-radius: 10px;}
 .bg_white {background:#fff;}
 #menu_wrap hr {display: block; height: 1px;border: 0; border-top: 2px solid #5F5F5F;margin:3px 0;}
-#menu_wrap .option{text-align: center ;}
+#menu_wrap .option{text-align: center;}
 #menu_wrap .option p {margin:10px 0;}  
 #menu_wrap .option button {margin-left:5px;}
 #placesList li {list-style: none;}
 #placesList .item {position:relative;border-bottom:1px solid #888;overflow: hidden;cursor: pointer;min-height: 65px;}
-#placesList .item span {display: block;margin-top:4px;}
-#placesList .item h5, #placesList .item .info {text-overflow: ellipsis;overflow: hidden;white-space: nowrap;}
+#placesList .item span {display: block;margin-top:4px; }
+#placesList .item h5, #placesList .item .info {left:50px; text-overflow: ellipsis;overflow:hidden;white-space: nowrap;}
 #placesList .item .info{padding:10px 0 10px 55px;}
 #placesList .info .gray {color:#8a8a8a;}
 #placesList .info .jibun {padding-left:26px;background:url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/places_jibun.png) no-repeat;}
@@ -34,12 +34,21 @@
 #pagination {margin:10px auto;text-align: center;}
 #pagination a {display:inline-block;margin-right:10px;}
 #pagination .on {font-weight: bold; cursor: default;color:#777;}
+
  .title {
     display: inline;
+}
+.info {
+    display: inline;
+    font-size: 10px;
+    color: slategray;
+    position: relative;
+    left:180px;
 }
 
 #title {
     width: 250px;
+    margin:20px;
 }
 
 .location {
@@ -48,19 +57,20 @@
 }
 
 .content {
-    display: flex;
-    margin-left: 500px;
+    padding :50px;
+    display: block;
+    position: relative;
     
-    
-}
-.price {
-    display: inline;
+
 }
 
+
+
 #price {
-    width:150px;
+    width:100px;
 }
-.image {
-    display: inline;
-    position: relative;
-} 
+
+#image{
+    width: 100px;
+}
+
