--- a/static/css/screens/guide_detail.css
+++ b/static/css/screens/guide_detail.css
@@ -3,7 +3,7 @@
     padding: 1rem;
     font-weight: 600;
     text-align:center;
-    color:mediumseagreen;
+    color : #52aace;
 }
 
 .g_detail_title {
@@ -18,6 +18,7 @@
     display: inline;
     position: relative;
     left: 70%;
+    
 
 }
 
@@ -33,29 +34,66 @@
     padding-top: 30px;
     padding-bottom: 30px;
     line-height: 1.5;
+    
 }
 
-.g_detail_price {
-    /* padding-left: 30px; */
-}
+
 
 .g_detail_spots {
     /* padding-left: 30px; */
     padding-bottom: 40px;
+    
 }
 
 .g_image {
     display: inline;
     height:400px; width:450px;
+    
+    
 }
 #map {
     height:400px;  width: 450px;
-    left : 500px;
-    bottom: 445px;
-     
+    left: 500px;
+    bottom: 400px;
+   
 }
 
-.g_delete_update {
-    padding-top:30px;
+
+.btn {
+    position: relative;
+    padding: 0.4rem;
+    border-radius: 10px;
+    color: cornsilk;
+    background-color: #52aace;
+    bottom: 400px;
+
+}
+    
+.btn:hover{
+     background-color: cornsilk;
+    color: rgba(0, 0, 0, 0.5);
 }
 
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width : 15rem;
+}
+
+/* .detail_wrap {
+    border: 1px solid;
+    border-color: #52aace;
+    border-radius: 10px;
+} */
+
+    
+    
+
+/* 
+.map_wrap {
+    
+    height:400px;  width: 450px;
+    position: relative;
+    background-color: mediumvioletred;
+} */
