--- a/Guide/templates/guide_detail.html
+++ b/Guide/templates/guide_detail.html
@@ -106,7 +106,7 @@
         
         var URL = "https://map.kakao.com/link/map/"+titles[i].trim()+","+latlng[i*2]+","+latlng[i*2+1];
         
-        var iwContent = '<div style="padding:5px;">'+titles[i]+' <br><a href="'+URL+'" style="color:blue" target="_blank">큰지도보기</a> <a href="https://map.kakao.com/link/to/Hello World!,33.450701,126.570667" style="color:blue" target="_blank">길찾기</a></div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+        var iwContent = '<div style="padding:5px;">'+titles[i]+' <br><a href="'+URL+'" style="color:blue" target="_blank">큰지도보기</a></div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
             iwPosition = new kakao.maps.LatLng(latlng[i*2],latlng[i*2+1]); //인포윈도우 표시 위치입니다
 
         // 인포윈도우를 생성합니다
