--- a/templates/base.html
+++ b/templates/base.html
@@ -3,15 +3,15 @@
   <!-- 헤드부분 -->
   {% include 'head.html' %}
   <body>
-    <div class="wrapper">
-      <!-- 헤더부분 -->
-      {% include 'header.html' %}
-      <!-- <hr /> -->
-      <!-- 컨텐츠 부분 -->
-      <div class="section_align">{% block content %}{% endblock%}</div>
-      <!-- <hr /> -->
-      <!-- 푸터 부분 -->
-      {% include 'footer.html' %}
-    </div>
+    <!-- 헤더부분 -->
+    {% include 'header.html' %}
+    <!-- <hr /> -->
+    <!-- 컨텐츠 부분 -->
+    <div class="section_align">{% block content %}{% endblock%}</div>
+    <!-- <hr /> -->
+    <!-- 푸터 부분 -->
+    {% include 'footer.html' %}
+    <script src="https://kit.fontawesome.com/2eb21cad7a.js" crossorigin="anonymous">
+    </script>
   </body>
 </html>
