--- a/QNA/templates/new_question.html
+++ b/QNA/templates/new_question.html
@@ -1,21 +1,30 @@
 {% extends 'base.html' %} {% block content %}
 
 <!-- 메인 SECTION -->
-<form action="{%url 'q_create'%}" method="POST" enctype ="multipart/form-data">
-    {%csrf_token%}
-    <p>제목: <input type="text" name="title" placeholder="제목을 입력하세요."></p>
-    <p>지역: <select name="location" id="">
-        <option value="국내">국내</option>
-        <option value="아시아">아시아</option>
-        <option value="유럽">유럽</option>
-        <option value="아프리카">아프리카</option>
-        <option value="오세아니아">오세아니아</option>
-        <option value="남미">남미</option>
-        <option value="북미">북미</option>
-    </select></p>
-    <p>내용: <textarea name="content" id="" cols="30" rows="10" placeholder="내용을 입력하세요."></textarea></p>
-    <p>이미지 첨부 <input type="file" id="image" name="image"></p>
-    <input type="submit" value="질문하기">
-</form>
+<div class="qna_body">
+        <div class="qna_detail">
+            <p class="qna_title">질문하기</p>
+            <form class="qna_new" action="{%url 'q_create'%}" method="POST" enctype ="multipart/form-data">
+                {%csrf_token%}
+                <div class="qna_new_question">
+                    <span>제목: <input class="qna_new_title" type="text" name="title" placeholder="제목을 입력하세요."></span>
+                    <span>지역: <select class="qna_search_select" name="location" id="">
+                        <option value="국내">국내</option>
+                        <option value="아시아">아시아</option>
+                        <option value="유럽">유럽</option>
+                        <option value="아프리카">아프리카</option>
+                        <option value="오세아니아">오세아니아</option>
+                        <option value="남미">남미</option>
+                        <option value="북미">북미</option>
+                    </select></span>
+                </div>
+                <span class="qna_new_content">내용: <textarea name="content" id="" cols="30" rows="10" placeholder="내용을 입력하세요."></textarea></span>
+                <div class="qna_new_question">
+                    <span><i class="far fa-images img_icon">:</i><input class="qna_new_image" type="file" id="image" name="image"></span>
+                    <input class="qna_new_submit" type="submit" value="질문하기">
+                </div>
+            </form>
+    </div>
+</div>
 
 {% endblock%}
