--- a/QNA/templates/qna_list.html
+++ b/QNA/templates/qna_list.html
@@ -1,70 +1,129 @@
 {% extends 'base.html' %} {% block content %}
 
 <!-- 메인 SECTION -->
-<p class="qna_title">여행 질문</p>
-<div class="qna_head">
-    <form action="{%url 'q_search' %}" method="GET">
-        <select class="qna_search_select" id="location" name="location">
-            <option value="국내">국내</option>
-            <option value="북미">북미</option>
-            <option value="남미">남미</option>
-            <option value="유럽">유럽</option>
-            <option value="아시아">아시아</option>
-            <option value="오세아니아">오세아니아</option>
-        </select>
-    <button class="qna_search_submit" type="submit"><i class="fas fa-search"></i></button>
-    </form>
-    
-    {% if request.user %}
-        <a class="qna_head_new" href="{% url 'q_new' %}">질문하기 <i class="fas fa-edit"></i></a>
-    {% endif %}
-</div>
-<br>
-{% if question_list %}
-    <table  class="table table-striped table-hover table-bordered">
-        <thead>
-            <tr>
-            <th scope="col">번호</th>
-            <th scope="col">제목</th>
-            <th scope="col">작성자</th>
-            <th scope="col">작성일</th>
-            </tr>
-        </thead>
-        <tbody>
-    {% for question in question_list %}
-        <!-- {% if question.vote %}
-            <p>채택된 질문입니다.</p>
-        {% endif %} -->
-        <!-- <a href="{% url 'q_detail' question.id %}" class="question">
-            <div class="question_no question_line">
-                {{question.id}}
-            </div>
-            <div class="question_title question_line">
-                {{question.title}}-{{question.answer_set.count}}
-            </div>
-            <div class="question_writer question_line">
-                {{question.writer}}
-            </div>
-            <div class="question_date question_line">
-                {{question.date}}
-            </div>
-        </a> -->
-            
+<div class="qna_body">
+    <p class="qna_title">여행 질문</p>
+    <div class="qna_head">
+        <form action="{%url 'q_search' %}" method="GET">
+            <select class="qna_search_select" id="location" name="location">
+                <option value="국내">국내</option>
+                <option value="북미">북미</option>
+                <option value="남미">남미</option>
+                <option value="유럽">유럽</option>
+                <option value="아시아">아시아</option>
+                <option value="오세아니아">오세아니아</option>
+            </select>
+        <button class="qna_search_submit" type="submit"><i class="fas fa-search"></i></button>
+        </form>
+        
+        {% if user.is_authenticated %}
+            <a class="qna_head_new" href="{% url 'q_new' %}">질문하기 <i class="fas fa-edit"></i></a>
+        {% endif %}
+    </div>
+    <br>
+    {% if question_list %}
+    <!-- 여기부터 부트스트랩 -->
+        <table  class="table table-striped table-hover table-bordered">
+            <thead>
+                <tr>
+                <th scope="col">번호</th>
+                <th scope="col">제목</th>
+                <th scope="col">작성자</th>
+                <th scope="col">작성일</th>
+                </tr>
+            </thead>
+            <tbody>
+        {% for question in question_list %}
                 <tr>
                     <th scope="row">{{question.id}}</th>
-                    <td><a href="{% url 'q_detail' question.id %}">{{question.title}}-{{question.answer_set.count}}</a></td>
+                    <td><a href="{% url 'q_detail' question.id %}">
+                        {%if question.vote %}
+                            <i class="fas fa-check-circle"></i>
+                        {%endif%}
+                        {{question.title}}-{{question.answer_set.count}}
+                    </a></td>
                     <td>{{question.writer}}</td>
-                    <td>{{question.date}}</td>
+                    <td>{{question.date|date:'Y. m. d'}}</td>
                 </tr>
-    {% endfor %}
-        </tbody>
-    </table>
-{% else %}
-<div class="qna_empty">
-    <i class="far fa-sad-tear"></i>
-    <span>게시글이 없습니다...</span>
+    <!-- 여기까지 -->
+        {% endfor %}
+            </tbody>
+        </table>
+    <!-- 이거도 부트스트랩 -->
+        <nav aria-label="Page navigation example" class="page_margin">
+            <ul class="pagination justify-content-center">
+                <li class="page-item">
+                    {%if question_list.has_previous%}
+                        <a class="page-link" href="?page=1" tabindex="-1" aria-disabled="true">
+                            <i class="fas fa-chevron-left fa-xs"></i>
+                            <i class="fas fa-chevron-left fa-xs"></i>
+                        </a>
+                    {%else%}
+                        <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
+                            <i class="fas fa-chevron-left fa-xs"></i>
+                            <i class="fas fa-chevron-left fa-xs"></i>
+                        </a>
+                    {%endif%}
+                </li>
+                <li class="page-item">
+                    {%if question_list.has_previous%}
+                        <a class="page-link" href="?page={{question_list.previous_page_number}}">
+                            <i class="fas fa-chevron-left fa-xs"></i>
+                        </a>
+                    {%else%}
+                        <a class="page-link" href="#">
+                            <i class="fas fa-chevron-left fa-xs"></i>
+                        </a>
+                    {%endif%}
+                </li>
+                <li class="page-item">
+                <a class="page-link" href="#">
+                    {{question_list.number}}
+                    </a>
+                </li>
+                <li class="page-item">
+                {%if question_list.has_next%}
+                    <a class="page-link" href="?page={{question_list.next_page_number}}">
+                        <i class="fas fa-chevron-right fa-xs"></i>
+                    </a>
+                {%else%}
+                    <a class="page-link" href="#">
+                        <i class="fas fa-chevron-right fa-xs"></i>
+                    </a>
+                {%endif%}
+                </li>
+                <li class="page-item">
+                {%if question_list.has_next%}
+                    <a class="page-link" href="?page={{question_list.paginator.num_pages}}">
+                        <i class="fas fa-chevron-right fa-xs"></i>
+                        <i class="fas fa-chevron-right fa-xs"></i>
+                    </a>
+                {%else%}
+                    <a class="page-link" href="#">
+                        <i class="fas fa-chevron-right fa-xs"></i>
+                        <i class="fas fa-chevron-right fa-xs"></i>
+                    </a>
+                {%endif%}
+                </li>
+            </ul>
+        </nav>
+    <!-- 여기까지 -->
+        <!-- {%if question_list.has_previous%}
+        <a href="?page=1">처음</a>
+        <a href="?page={{question_list.previous_page_number}}">이전</a>
+        {%endif%}
+        <span>{{question_list.number}}</span>
+        <span>of</span>
+        <span>{{question_list.paginator.num_pages}}</span>
+        {%if question_list.has_next%}
+        <a href="?page={{question_list.next_page_number}}">다음</a>
+        <a href="?page={{question_list.paginator.num_pages}}">마지막</a>
+        {%endif%} -->
+    {% else %}
+    <div class="qna_empty">
+        <i class="far fa-sad-tear"></i>
+        <span>게시글이 없습니다...</span>
+    </div>
+    {% endif %}
 </div>
-{% endif %}
-<script src="https://kit.fontawesome.com/2eb21cad7a.js" crossorigin="anonymous">
-</script>
 {% endblock%}
