--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,7 +7,7 @@
 @import "screens/nav.css";
 @import "screens/signup.css";
 @import "screens/detail.css";
-@import "screens/qna_list.css";
+@import "screens/qna.css";
 /* @import "screens/search.css";
 @import "screens/more.css";
 @import "screens/chat.css"; */
