--- a/static/css/screens/guide_new.css
+++ b/static/css/screens/guide_new.css
@@ -1,6 +1,6 @@
 .map_wrap, .map_wrap * {margin:0;padding:0;font-family:'Malgun Gothic',dotum,'돋움',sans-serif;font-size:12px;}
 .map_wrap a, .map_wrap a:hover, .map_wrap a:active{color:#000;text-decoration: none;}
-.map_wrap {position:relative;width:100%;height:500px;}
+.map_wrap {position:relative;top:40px;width:100%;height:500px;}
 #menu_wrap {position:absolute;top:0;left:0;bottom:0;width:250px;margin:10px 0 30px 10px;padding:5px;overflow-y:auto;background:rgba(255, 255, 255, 0.7);z-index: 1;font-size:12px;border-radius: 10px;}
 .bg_white {background:#fff;}
 #menu_wrap hr {display: block; height: 1px;border: 0; border-top: 2px solid #5F5F5F;margin:3px 0;}
@@ -43,7 +43,7 @@
     font-size: 10px;
     color: slategray;
     position: relative;
-    left:180px;
+    left:70px;
 }
 
 #title {
@@ -54,12 +54,12 @@
 .location {
     display: inline;
     position: relative;
+    left:40%;
 }
 
 .content {
     padding :50px;
-    display: block;
-    position: relative;
+    
     
 
 }
@@ -68,9 +68,23 @@
 
 #price {
     width:100px;
+  
 }
 
 #image{
     width: 100px;
+    
 }
 
+.new_guide_title{
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.section_align {
+    border: 1px solid;
+    border-color: #52aace;
+    border-radius: 10px;
+    padding:30px;
+}
