--- a/static/css/screens/guide_new.css
+++ b/static/css/screens/guide_new.css
@@ -82,7 +82,7 @@
     text-align: center;
 }
 
-.section_align {
+.wrap_section {
     border: 1px solid;
     border-color: #52aace;
     border-radius: 10px;
