--- a/Guide/templates/guide_update.html
+++ b/Guide/templates/guide_update.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
     {% block content %}
+    <div class="wrap_section">
+    <div style="font-size: 30px; font-weight: bold; text-align: center;color:#52aace;">글 수정하기</div>
+    <br>
     <form action="{% url 'guide_update' guide_update.id %}" method='POST' enctype ="multipart/form-data">
         {% csrf_token %}
             {% if guide_update %}
@@ -19,7 +22,7 @@
                     </select>
                     <br>
 
-                    <textarea cols="120" rows="20" id="content" name="content">{{guide_update.content}}</textarea>
+                    <textarea cols="100" rows="20" id="content" name="content">{{guide_update.content}}</textarea>
                     <br>
 
                    
@@ -39,4 +42,5 @@
                 </div>
             {% endif %}
     </form>
+</div>
     {% endblock %}
