--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,7 +18,7 @@
 @import "screens/guide_list.css";
 @import "screens/guide_detail.css";
 @import "screens/guide_new.css";
-
+@import "screens/guide_update.css";
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
