--- a/Guide/templates/kakaopay/fail.html
+++ b/Guide/templates/kakaopay/fail.html
@@ -1,2 +1,6 @@
-
-결제실패
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+<h2 style="text-align: center; font-size: 30px;">결제에 실패하였습니다</h2>
+<br>
+{% endblock %}
