--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
     {% if user.is_authenticated %}
     <div style="display: flex">
       <h4 style="padding: 3px 5px; font-weight: 500">
-        Welcom! {{user.username}}
+        Welcome! {{user.username}}
       </h4>
       <span
         style="
