--- a/Guide/templates/guide_new.html
+++ b/Guide/templates/guide_new.html
@@ -29,29 +29,29 @@
         
         
 
-        <textarea cols="100 " rows="20" id="content" name="content" class="content" ></textarea>
+        <span class="guide_content"><textarea cols="75 " rows="10" id="content" name="content"  ></textarea></span>
         
         
         
-        <div class="price" style="position: relative; display:inline">
+        <div class="price" style="position: relative; display:inline; padding-bottom:0.4rem;">
             <label for="price">가격</label>
             <input type="number" id="price" name="price">
         </div>
 
-        <div class="image" style="position: relative;  display:inline;">
+        <div class="image" style="position: relative;  display:inline;padding-bottom:0.4rem;">
             <label for="image"><i class="far fa-images img_icon">:</i></label>
             <input type="file" id="image" name="image" style=" width:250px; position: relative; bottom:5px;">
         </div>
-        <h1 class="info">장소검색이 끝나면 오른쪽 버튼을 눌러주세요</h1>
+       
         
-            <button type="submit" class="submit" style="position: relative; top:630px; display:inline; left:100px;">글 올리기</button>
+            <button type="submit" class="submit" style="width:15%; ; position: relative; top:35em; display:inline; left:300px;">글 올리기</button>
         
         </div>
         
         </form>
         
         <div class="map_wrap">
-            <div id="map" style="width:100%;height:500px;position:relative;overflow:hidden; top:10px;left:10px;"></div>
+            <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
         
             <div id="menu_wrap" class="bg_white">
                 <div class="option">
@@ -68,8 +68,10 @@
             </div>
         </div>
         
-        <br><br><br><br><br><br>
-        <button id="map_data" type="submit" style="position: relative; bottom:625px; left:770px">장소 검색 끝</button>
+        
+        <span class="save">
+            <h1 class="introduce">장소검색이 끝나면 오른쪽 버튼을 눌러주세요</h1>
+        <button id="map_data" type="submit" style="position: relative; margin-left: 10px;">장소 검색 끝</button></span>
         
         
     </div>
@@ -79,9 +81,9 @@
     </div>
         
 
-        <script src="https://kit.fontawesome.com/2eb21cad7a.js" crossorigin="anonymous">
-        </script>
-
+       
+    <script src="https://kit.fontawesome.com/2eb21cad7a.js" crossorigin="anonymous">
+    </script>
         
         <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c6c555277e504f8c39203764bdea1d03&libraries=services"></script>
        
@@ -332,6 +334,7 @@
             selected_location[arr[0]]=arr[1];
             cnt++;
         }
+        var save_cnt=0;
 
         var URL = "{% url 'save_map_data' %}"
         $("#map_data").click(function(){
@@ -341,8 +344,19 @@
                 'keysvalues' :selected_location,
                 'cnt' :cnt
             }
-            if (data['keys'].length== 0 ) alert ("하나 이상 선택하세요");
-            else alert("저장되었습니다");
+            if (data['keys'].length== 0 ) {
+                alert ("하나 이상 선택하세요");
+                return ;
+            }
+            else if (save_cnt>=1) {
+                alert("이미 저장되었습니다");
+                return ;
+            }
+            else {
+                    alert("저장되었습니다");
+                    save_cnt++;
+                }
+            
 
             $.post(URL, JSON.stringify(data));
         });
