--- a/Guide/templates/kakaopay/cancel.html
+++ b/Guide/templates/kakaopay/cancel.html
@@ -1,2 +1,7 @@
 {% extends 'base.html' %}
-결제 취소 
+{% load static %}
+{% block content %}
+<h2 style="text-align: center; font-size: 30px;">결제가 취소되었습니다</h2>
+<br>
+
+{% endblock %}
