--- a/static/css/screens/guide_new.css
+++ b/static/css/screens/guide_new.css
@@ -1,6 +1,6 @@
-.map_wrap, .map_wrap * {margin:0;padding:0;font-family:'Malgun Gothic',dotum,'돋움',sans-serif;font-size:12px;}
+ .map_wrap, .map_wrap * {margin:0;padding:0;font-family:'Malgun Gothic',dotum,'돋움',sans-serif;font-size:12px;}
 .map_wrap a, .map_wrap a:hover, .map_wrap a:active{color:#000;text-decoration: none;}
-.map_wrap {position:relative;top:40px;width:100%;height:500px;}
+.map_wrap {position:relative;width:100%;height:500px;}
 #menu_wrap {position:absolute;top:0;left:0;bottom:0;width:250px;margin:10px 0 30px 10px;padding:5px;overflow-y:auto;background:rgba(255, 255, 255, 0.7);z-index: 1;font-size:12px;border-radius: 10px;}
 .bg_white {background:#fff;}
 #menu_wrap hr {display: block; height: 1px;border: 0; border-top: 2px solid #5F5F5F;margin:3px 0;}
@@ -9,8 +9,8 @@
 #menu_wrap .option button {margin-left:5px;}
 #placesList li {list-style: none;}
 #placesList .item {position:relative;border-bottom:1px solid #888;overflow: hidden;cursor: pointer;min-height: 65px;}
-#placesList .item span {display: block;margin-top:4px; }
-#placesList .item h5, #placesList .item .info {left:50px; text-overflow: ellipsis;overflow:hidden;white-space: nowrap;}
+#placesList .item span {display: block;margin-top:4px;}
+#placesList .item h5, #placesList .item .info {text-overflow: ellipsis;overflow: hidden;white-space: nowrap;}
 #placesList .item .info{padding:10px 0 10px 55px;}
 #placesList .info .gray {color:#8a8a8a;}
 #placesList .info .jibun {padding-left:26px;background:url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/places_jibun.png) no-repeat;}
@@ -34,16 +34,16 @@
 #pagination {margin:10px auto;text-align: center;}
 #pagination a {display:inline-block;margin-right:10px;}
 #pagination .on {font-weight: bold; cursor: default;color:#777;}
-
  .title {
     display: inline;
 }
-.info {
-    display: inline;
-    font-size: 10px;
-    color: slategray;
-    position: relative;
-    left:70px;
+.save {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 1.5rem;
+    
+
 }
 
 #title {
@@ -57,14 +57,28 @@
     left:40%;
 }
 
-.content {
-    padding :50px;
-    
-    
+.guide_content {
+    display: flex;
+    align-items: flex-start;
+    margin: 1rem 0rem;
+    font-weight: 800;
 
+}
+.guide_content textarea{
+    width: 100%;
+    height: 20rem;
+    border: 3px solid #52aace;
+    margin: 0;
+    margin-left: 0.5rem;
+    font-weight: 500;
 }
 
 
+
+.introduce {
+    font-size: 13px;
+    color: slategray;
+}
 
 #price {
     width:100px;
@@ -87,4 +101,5 @@
     border-color: #52aace;
     border-radius: 10px;
     padding:30px;
-}
+} 
+
